--- a/tests/gingerale.yaml
+++ b/tests/gingerale.yaml
@@ -255,8 +255,8 @@ tests:
         2>&1
     expected_output_contains: "Reading"
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_tal_ALE.nii
-      - output_exists: test_output/gingerale/ale_results/motor_tal_P.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_tal_ALE.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_tal_P.nii
 
   - name: Basic ALE analysis (MNI)
     description: Run basic ALE meta-analysis on MNI coordinates
@@ -268,8 +268,8 @@ tests:
         -pval=test_output/gingerale/ale_results/motor_mni_P \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_mni_ALE.nii
-      - output_exists: test_output/gingerale/ale_results/motor_mni_P.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_mni_ALE.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_mni_P.nii
 
   - name: ALE with minimal foci
     description: Run ALE on minimal dataset for quick test
@@ -280,7 +280,7 @@ tests:
         -pval=test_output/gingerale/ale_results/minimal_P \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/minimal_ALE.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/minimal_ALE.nii
 
   # ==========================================================================
   # MASK OPTIONS
@@ -294,7 +294,7 @@ tests:
         -ale=test_output/gingerale/ale_results/tal_conservative_ALE \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/tal_conservative_ALE.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/tal_conservative_ALE.nii
 
   - name: ALE with Talairach dilated mask
     description: Use less conservative (dilated) Talairach mask
@@ -305,7 +305,7 @@ tests:
         -ale=test_output/gingerale/ale_results/tal_dilated_ALE \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/tal_dilated_ALE.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/tal_dilated_ALE.nii
 
   - name: ALE with MNI conservative mask
     description: Use more conservative MNI whole brain mask
@@ -316,7 +316,7 @@ tests:
         -ale=test_output/gingerale/ale_results/mni_conservative_ALE \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/mni_conservative_ALE.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/mni_conservative_ALE.nii
 
   - name: ALE with MNI dilated mask
     description: Use less conservative (dilated) MNI mask
@@ -327,7 +327,7 @@ tests:
         -ale=test_output/gingerale/ale_results/mni_dilated_ALE \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/mni_dilated_ALE.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/mni_dilated_ALE.nii
 
   # ==========================================================================
   # THRESHOLDING METHODS - UNCORRECTED
@@ -343,8 +343,8 @@ tests:
         -p=0.05 \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_p05_ALE.nii
-      - output_exists: test_output/gingerale/ale_results/motor_p05_thresh.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_p05_ALE.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_p05_thresh.nii
 
   - name: ALE with uncorrected p-value threshold (p=0.01)
     description: Apply stricter uncorrected p-value threshold at 0.01
@@ -357,7 +357,7 @@ tests:
         -p=0.01 \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_p01_thresh.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_p01_thresh.nii
 
   - name: ALE with uncorrected p-value threshold (p=0.001)
     description: Apply very strict uncorrected p-value threshold at 0.001
@@ -369,7 +369,7 @@ tests:
         -p=0.001 \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_p001_thresh.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_p001_thresh.nii
 
   # ==========================================================================
   # THRESHOLDING METHODS - FDR
@@ -384,7 +384,7 @@ tests:
         -pN=0.05 \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_fdrN_thresh.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_fdrN_thresh.nii
 
   - name: ALE with FDR pID correction (q=0.05)
     description: Apply FDR pID threshold at q=0.05
@@ -396,7 +396,7 @@ tests:
         -pID=0.05 \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_fdrID_thresh.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_fdrID_thresh.nii
 
   # ==========================================================================
   # THRESHOLDING METHODS - PERMUTATION-BASED (FWE)
@@ -413,7 +413,7 @@ tests:
         2>&1
     expected_output_contains: "permutation"
     validate:
-      - output_exists: test_output/gingerale/ale_results/minimal_fwe_ALE.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/minimal_fwe_ALE.nii
 
   - name: ALE with FWE correction (500 perms)
     description: Apply FWE correction with more permutations for accuracy
@@ -426,7 +426,7 @@ tests:
         -fwe=0.05 \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/minimal_fwe500_ALE.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/minimal_fwe500_ALE.nii
 
   # ==========================================================================
   # THRESHOLDING METHODS - CLUSTER-LEVEL INFERENCE
@@ -443,7 +443,7 @@ tests:
         -clust=0.05 \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/minimal_clust_ALE.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/minimal_clust_ALE.nii
 
   # ==========================================================================
   # MINIMUM CLUSTER VOLUME
@@ -459,7 +459,7 @@ tests:
         -minVol=200 \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_minvol_thresh.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_minvol_thresh.nii
 
   # ==========================================================================
   # ALE METHOD OPTIONS
@@ -474,7 +474,7 @@ tests:
         -nonadd \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_nonadd_ALE.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_nonadd_ALE.nii
 
   - name: ALE only (no P-value image)
     description: Generate only ALE image without P-value computation
@@ -485,7 +485,7 @@ tests:
         -noPVal \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/minimal_aleonly.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/minimal_aleonly.nii
 
   # ==========================================================================
   # getClustersOnly - CLUSTER DETECTION
@@ -509,7 +509,7 @@ tests:
         -out=test_output/gingerale/ale_results/motor_p01_clust \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_p01_clust.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_p01_clust.nii
 
   - name: Cluster detection with minimum volume
     description: Detect clusters with minimum volume threshold
@@ -521,7 +521,7 @@ tests:
         -out=test_output/gingerale/ale_results/motor_p01_clust_min100 \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_p01_clust_min100.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_p01_clust_min100.nii
 
   - name: Cluster detection with large minimum volume
     description: Detect only large clusters (min 500 mm3)
@@ -533,7 +533,7 @@ tests:
         -out=test_output/gingerale/ale_results/motor_p01_clust_min500 \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_p01_clust_min500.nii
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_p01_clust_min500.nii
 
   # ==========================================================================
   # getClustersStats - CLUSTER STATISTICS
@@ -564,7 +564,7 @@ tests:
         -out=test_output/gingerale/ale_results/motor_p01_stats \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_p01_stats_clust.txt
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_p01_stats_clust.txt
 
   - name: Cluster statistics with P values
     description: Include P values in cluster statistics
@@ -578,7 +578,7 @@ tests:
         -out=test_output/gingerale/ale_results/motor_p01_stats_pval \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_p01_stats_pval_clust.txt
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_p01_stats_pval_clust.txt
 
   - name: Cluster statistics including all labels
     description: Include non-gray matter labels in statistics
@@ -592,7 +592,7 @@ tests:
         -out=test_output/gingerale/ale_results/motor_p01_stats_alllab \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_p01_stats_alllab_clust.txt
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_p01_stats_alllab_clust.txt
 
   - name: Cluster statistics with foci listing
     description: List contributing foci for each cluster
@@ -606,7 +606,7 @@ tests:
         -out=test_output/gingerale/ale_results/motor_p01_stats_foci \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/ale_results/motor_p01_stats_foci_clust.txt
+      - output_exists: ${output_dir}/gingerale/ale_results/motor_p01_stats_foci_clust.txt
 
   # ==========================================================================
   # getALE2Contrast - CONTRAST ANALYSIS
@@ -637,7 +637,7 @@ tests:
         -p=0.01 \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/contrast/motor_thresh.nii
+      - output_exists: ${output_dir}/gingerale/contrast/motor_thresh.nii
 
   - name: ALE for contrast dataset 2 (cognitive)
     description: Generate ALE image for cognitive task dataset
@@ -649,7 +649,7 @@ tests:
         -p=0.01 \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/contrast/cognitive_thresh.nii
+      - output_exists: ${output_dir}/gingerale/contrast/cognitive_thresh.nii
 
   - name: ALE for pooled dataset
     description: Generate ALE image for pooled (combined) dataset
@@ -661,7 +661,7 @@ tests:
         -p=0.01 \
         2>&1
     validate:
-      - output_exists: test_output/gingerale/contrast/pooled_thresh.nii
+      - output_exists: ${output_dir}/gingerale/contrast/pooled_thresh.nii
 
   - name: Basic contrast analysis
     description: Run contrast analysis between motor and cognitive datasets
