--- a/tests/heudiconv.yaml
+++ b/tests/heudiconv.yaml
@@ -206,7 +206,7 @@ tests:
     description: Extract a central region from T1w image
     command: nib-roi -i 40:120 -j 50:140 -k 50:140 ${t1w} test_output/nibabel_out/t1w_roi_central.nii.gz
     validate:
-      - output_exists: test_output/nibabel_out/t1w_roi_central.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_roi_central.nii.gz
 
   - name: nib-roi verify extracted dimensions
     description: Verify the dimensions of extracted ROI
@@ -218,13 +218,13 @@ tests:
     description: Extract a single slice along k dimension
     command: nib-roi -k 96:97 ${t1w} test_output/nibabel_out/t1w_single_slice.nii.gz
     validate:
-      - output_exists: test_output/nibabel_out/t1w_single_slice.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_single_slice.nii.gz
 
   - name: nib-roi extract temporal subset
     description: Extract first 10 timepoints from BOLD
     command: nib-roi -t 0:10 ${bold} test_output/nibabel_out/bold_first10.nii.gz
     validate:
-      - output_exists: test_output/nibabel_out/bold_first10.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/bold_first10.nii.gz
 
   - name: nib-roi verify temporal subset
     description: Verify BOLD temporal subset has 10 volumes
@@ -236,19 +236,19 @@ tests:
     description: Extract last 20 timepoints from BOLD
     command: nib-roi -t 280:300 ${bold} test_output/nibabel_out/bold_last20.nii.gz
     validate:
-      - output_exists: test_output/nibabel_out/bold_last20.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/bold_last20.nii.gz
 
   - name: nib-roi flip i axis
     description: Extract ROI with flipped i axis
     command: nib-roi -i 0:160:-1 ${t1w} test_output/nibabel_out/t1w_flip_i.nii.gz
     validate:
-      - output_exists: test_output/nibabel_out/t1w_flip_i.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_flip_i.nii.gz
 
   - name: nib-roi spatial and temporal crop
     description: Extract spatial and temporal subset from BOLD
     command: nib-roi -i 10:50 -j 10:50 -k 5:28 -t 10:20 ${bold} test_output/nibabel_out/bold_cropped.nii.gz
     validate:
-      - output_exists: test_output/nibabel_out/bold_cropped.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/bold_cropped.nii.gz
 
   # ==========================================================================
   # NIBABEL - nib-conform (Image conforming)
@@ -257,13 +257,13 @@ tests:
     description: Conform T1w to default shape and voxel size
     command: nib-conform ${t1w} test_output/nibabel_out/t1w_conformed.nii.gz -f
     validate:
-      - output_exists: test_output/nibabel_out/t1w_conformed.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_conformed.nii.gz
 
   - name: nib-conform custom shape
     description: Conform T1w to custom shape (128x128x128)
     command: nib-conform --out-shape 128 128 128 ${t1w} test_output/nibabel_out/t1w_128cube.nii.gz -f
     validate:
-      - output_exists: test_output/nibabel_out/t1w_128cube.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_128cube.nii.gz
 
   - name: nib-conform verify custom shape
     description: Verify conformed image has correct dimensions
@@ -275,31 +275,31 @@ tests:
     description: Conform T1w to 2mm isotropic voxels
     command: nib-conform --voxel-size 2.0 2.0 2.0 ${t1w} test_output/nibabel_out/t1w_2mm.nii.gz -f
     validate:
-      - output_exists: test_output/nibabel_out/t1w_2mm.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_2mm.nii.gz
 
   - name: nib-conform RAS orientation
     description: Conform T1w to RAS orientation
     command: nib-conform --orientation RAS ${t1w} test_output/nibabel_out/t1w_ras.nii.gz -f
     validate:
-      - output_exists: test_output/nibabel_out/t1w_ras.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_ras.nii.gz
 
   - name: nib-conform LPI orientation
     description: Conform T1w to LPI orientation
     command: nib-conform --orientation LPI ${t1w} test_output/nibabel_out/t1w_lpi.nii.gz -f
     validate:
-      - output_exists: test_output/nibabel_out/t1w_lpi.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_lpi.nii.gz
 
   - name: nib-conform custom shape and voxel size
     description: Conform T1w to custom shape and voxel size
     command: nib-conform --out-shape 96 96 96 --voxel-size 2.0 2.0 2.0 ${t1w} test_output/nibabel_out/t1w_custom.nii.gz -f
     validate:
-      - output_exists: test_output/nibabel_out/t1w_custom.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_custom.nii.gz
 
   - name: nib-conform T2 image
     description: Conform T2 image to default parameters
     command: nib-conform ${t2} test_output/nibabel_out/t2_conformed.nii.gz -f
     validate:
-      - output_exists: test_output/nibabel_out/t2_conformed.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t2_conformed.nii.gz
 
   # ==========================================================================
   # NIBABEL - nib-convert (Image format conversion)
@@ -308,37 +308,37 @@ tests:
     description: Convert T1w to float32 data type
     command: nib-convert --out-dtype float32 ${t1w} test_output/nibabel_out/t1w_float32.nii.gz -f
     validate:
-      - output_exists: test_output/nibabel_out/t1w_float32.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_float32.nii.gz
 
   - name: nib-convert to uint8
     description: Convert T1w to uint8 data type
     command: nib-convert --out-dtype uint8 ${t1w} test_output/nibabel_out/t1w_uint8.nii.gz -f
     validate:
-      - output_exists: test_output/nibabel_out/t1w_uint8.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_uint8.nii.gz
 
   - name: nib-convert to int32
     description: Convert T1w to int32 data type
     command: nib-convert --out-dtype int32 ${t1w} test_output/nibabel_out/t1w_int32.nii.gz -f
     validate:
-      - output_exists: test_output/nibabel_out/t1w_int32.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_int32.nii.gz
 
   - name: nib-convert to float64
     description: Convert T1w to float64 data type
     command: nib-convert --out-dtype float64 ${t1w} test_output/nibabel_out/t1w_float64.nii.gz -f
     validate:
-      - output_exists: test_output/nibabel_out/t1w_float64.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_float64.nii.gz
 
   - name: nib-convert BOLD to float32
     description: Convert BOLD to float32 data type
     command: nib-convert --out-dtype float32 ${bold} test_output/nibabel_out/bold_float32.nii.gz -f
     validate:
-      - output_exists: test_output/nibabel_out/bold_float32.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/bold_float32.nii.gz
 
   - name: nib-convert to uncompressed nii
     description: Convert T1w to uncompressed NIfTI format
     command: nib-convert ${t1w} test_output/nibabel_out/t1w_uncompressed.nii -f
     validate:
-      - output_exists: test_output/nibabel_out/t1w_uncompressed.nii
+      - output_exists: ${output_dir}/nibabel_out/t1w_uncompressed.nii
 
   # ==========================================================================
   # PYDICOM - DICOM utilities
@@ -412,7 +412,7 @@ tests:
       nib-ls -s test_output/nibabel_out/t1w_brain_roi.nii.gz && \
       nib-nifti-dx test_output/nibabel_out/t1w_brain_roi.nii.gz
     validate:
-      - output_exists: test_output/nibabel_out/t1w_brain_roi.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_brain_roi.nii.gz
 
   - name: Image reorientation pipeline
     description: Conform image and verify orientation
@@ -421,7 +421,7 @@ tests:
       nib-ls test_output/nibabel_out/t1w_ras_pipe.nii.gz && \
       nib-nifti-dx test_output/nibabel_out/t1w_ras_pipe.nii.gz
     validate:
-      - output_exists: test_output/nibabel_out/t1w_ras_pipe.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_ras_pipe.nii.gz
 
   - name: BOLD preprocessing ROI workflow
     description: Extract temporal and spatial subset from BOLD data
@@ -429,7 +429,7 @@ tests:
       nib-roi -t 50:100 ${bold} test_output/nibabel_out/bold_subset.nii.gz && \
       nib-ls -s test_output/nibabel_out/bold_subset.nii.gz
     validate:
-      - output_exists: test_output/nibabel_out/bold_subset.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/bold_subset.nii.gz
 
   - name: Format conversion pipeline
     description: Convert and verify data type changes
@@ -437,7 +437,7 @@ tests:
       nib-convert --out-dtype float32 ${t1w} test_output/nibabel_out/t1w_f32_pipe.nii.gz -f && \
       nib-ls test_output/nibabel_out/t1w_f32_pipe.nii.gz
     validate:
-      - output_exists: test_output/nibabel_out/t1w_f32_pipe.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_f32_pipe.nii.gz
     expected_output_contains: "float32"
 
   - name: Isotropic resampling pipeline
@@ -446,7 +446,7 @@ tests:
       nib-conform --voxel-size 1.0 1.0 1.0 ${t1w} test_output/nibabel_out/t1w_1mm_iso.nii.gz -f && \
       nib-ls test_output/nibabel_out/t1w_1mm_iso.nii.gz
     validate:
-      - output_exists: test_output/nibabel_out/t1w_1mm_iso.nii.gz
+      - output_exists: ${output_dir}/nibabel_out/t1w_1mm_iso.nii.gz
     expected_output_contains: "1.00x1.00x1.00"
 
   # ==========================================================================
