--- a/tests/mritools.yaml
+++ b/tests/mritools.yaml
@@ -87,14 +87,14 @@ tests:
         niimath ${t1w} -div 500 -sub 0.5 -mul 6.283185 test_output/synthetic/phase_3d.nii.gz
       "
     validate:
-      - output_exists: test_output/synthetic/phase_3d.nii.gz
+      - output_exists: ${output_dir}/synthetic/phase_3d.nii.gz
 
   - name: Create synthetic magnitude for testing
     description: Copy magnitude image for ROMEO/CLEARSWI tests
     command: |
       cp ${t1w} test_output/synthetic/mag_3d.nii.gz
     validate:
-      - output_exists: test_output/synthetic/mag_3d.nii.gz
+      - output_exists: ${output_dir}/synthetic/mag_3d.nii.gz
 
   - name: Create 4D synthetic phase from BOLD
     description: Generate synthetic 4D wrapped phase by scaling BOLD values
@@ -103,7 +103,7 @@ tests:
         niimath ${bold} -Tmean -div 1000 -sub 0.5 -mul 6.283185 test_output/synthetic/phase_4d_mean.nii.gz
       "
     validate:
-      - output_exists: test_output/synthetic/phase_4d_mean.nii.gz
+      - output_exists: ${output_dir}/synthetic/phase_4d_mean.nii.gz
 
   # ==========================================================================
   # ROMEO PHASE UNWRAPPING TESTS
@@ -118,7 +118,7 @@ tests:
             -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/romeo/unwrapped_nomask.nii.gz
+      - output_exists: ${output_dir}/romeo/unwrapped_nomask.nii.gz
 
   - name: ROMEO single-echo with robustmask
     description: Test ROMEO unwrapping with automatic robust masking
@@ -130,7 +130,7 @@ tests:
             -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/romeo/unwrapped_robustmask.nii.gz
+      - output_exists: ${output_dir}/romeo/unwrapped_robustmask.nii.gz
 
   - name: ROMEO with quality mask threshold
     description: Test ROMEO with quality mask at specific threshold
@@ -142,7 +142,7 @@ tests:
             -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/romeo/unwrapped_qualitymask.nii.gz
+      - output_exists: ${output_dir}/romeo/unwrapped_qualitymask.nii.gz
 
   - name: ROMEO with mask unwrapped option
     description: Test ROMEO applying mask on the unwrapped result
@@ -155,7 +155,7 @@ tests:
             -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/romeo/unwrapped_masked_result.nii.gz
+      - output_exists: ${output_dir}/romeo/unwrapped_masked_result.nii.gz
 
   - name: ROMEO write quality map
     description: Test ROMEO outputting quality map
@@ -168,7 +168,7 @@ tests:
             -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/romeo/unwrapped_quality/
+      - output_exists: ${output_dir}/romeo/unwrapped_quality/
 
   - name: ROMEO write all quality maps
     description: Test ROMEO outputting all individual quality maps
@@ -181,7 +181,7 @@ tests:
             -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/romeo/unwrapped_quality_all/
+      - output_exists: ${output_dir}/romeo/unwrapped_quality_all/
 
   - name: ROMEO correct global phase offset
     description: Test ROMEO with global phase correction
@@ -194,7 +194,7 @@ tests:
             -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/romeo/unwrapped_global_corrected.nii.gz
+      - output_exists: ${output_dir}/romeo/unwrapped_global_corrected.nii.gz
 
   - name: ROMEO with phase threshold
     description: Test ROMEO with maximum wrap threshold
@@ -207,7 +207,7 @@ tests:
             -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/romeo/unwrapped_threshold.nii.gz
+      - output_exists: ${output_dir}/romeo/unwrapped_threshold.nii.gz
 
   - name: ROMEO with romeo2 weights
     description: Test ROMEO using romeo2 weight algorithm
@@ -220,7 +220,7 @@ tests:
             -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/romeo/unwrapped_romeo2.nii.gz
+      - output_exists: ${output_dir}/romeo/unwrapped_romeo2.nii.gz
 
   - name: ROMEO with romeo3 weights
     description: Test ROMEO using romeo3 weight algorithm
@@ -233,7 +233,7 @@ tests:
             -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/romeo/unwrapped_romeo3.nii.gz
+      - output_exists: ${output_dir}/romeo/unwrapped_romeo3.nii.gz
 
   - name: ROMEO with bestpath weights
     description: Test ROMEO using bestpath weight algorithm
@@ -246,7 +246,7 @@ tests:
             -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/romeo/unwrapped_bestpath.nii.gz
+      - output_exists: ${output_dir}/romeo/unwrapped_bestpath.nii.gz
 
   - name: ROMEO with custom weight flags
     description: Test ROMEO using custom weight bit flags
@@ -259,7 +259,7 @@ tests:
             -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/romeo/unwrapped_custom_weights.nii.gz
+      - output_exists: ${output_dir}/romeo/unwrapped_custom_weights.nii.gz
 
   - name: ROMEO no memory mapping
     description: Test ROMEO with memory mapping disabled
@@ -272,7 +272,7 @@ tests:
             -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/romeo/unwrapped_nommap.nii.gz
+      - output_exists: ${output_dir}/romeo/unwrapped_nommap.nii.gz
 
   - name: ROMEO phase only (no magnitude)
     description: Test ROMEO unwrapping without magnitude guidance
@@ -283,7 +283,7 @@ tests:
             -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/romeo/unwrapped_phase_only.nii.gz
+      - output_exists: ${output_dir}/romeo/unwrapped_phase_only.nii.gz
 
   # ==========================================================================
   # CLEARSWI SUSCEPTIBILITY WEIGHTED IMAGING TESTS
@@ -297,7 +297,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_basic.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_basic.nii.gz
 
   - name: CLEARSWI with laplacian unwrapping
     description: Test CLEARSWI using laplacian unwrapping algorithm
@@ -309,7 +309,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_laplacian.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_laplacian.nii.gz
 
   - name: CLEARSWI with romeo unwrapping
     description: Test CLEARSWI using ROMEO unwrapping algorithm
@@ -321,7 +321,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_romeo.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_romeo.nii.gz
 
   - name: CLEARSWI with custom filter size
     description: Test CLEARSWI with modified high-pass filter size
@@ -333,7 +333,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_filter8.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_filter8.nii.gz
 
   - name: CLEARSWI with 3D filter
     description: Test CLEARSWI with 3D high-pass filter
@@ -345,7 +345,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_filter3d.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_filter3d.nii.gz
 
   - name: CLEARSWI positive phase scaling
     description: Test CLEARSWI with positive phase scaling type
@@ -357,7 +357,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_positive.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_positive.nii.gz
 
   - name: CLEARSWI negative phase scaling
     description: Test CLEARSWI with negative phase scaling type
@@ -369,7 +369,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_negative.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_negative.nii.gz
 
   - name: CLEARSWI negativetanh phase scaling
     description: Test CLEARSWI with negativetanh phase scaling type
@@ -381,7 +381,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_negativetanh.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_negativetanh.nii.gz
 
   - name: CLEARSWI triangular phase scaling
     description: Test CLEARSWI with triangular phase scaling type
@@ -393,7 +393,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_triangular.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_triangular.nii.gz
 
   - name: CLEARSWI with phase scaling strength
     description: Test CLEARSWI with modified phase scaling strength
@@ -405,7 +405,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_strength6.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_strength6.nii.gz
 
   - name: CLEARSWI SNR magnitude combination
     description: Test CLEARSWI with SNR magnitude combination
@@ -417,7 +417,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_snr.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_snr.nii.gz
 
   - name: CLEARSWI average magnitude combination
     description: Test CLEARSWI with average magnitude combination
@@ -429,7 +429,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_average.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_average.nii.gz
 
   - name: CLEARSWI sensitivity correction off
     description: Test CLEARSWI with sensitivity correction disabled
@@ -441,7 +441,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_nosens.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_nosens.nii.gz
 
   - name: CLEARSWI softplus scaling off
     description: Test CLEARSWI with softplus scaling disabled
@@ -453,7 +453,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_nosoftplus.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_nosoftplus.nii.gz
 
   - name: CLEARSWI no memory mapping
     description: Test CLEARSWI with memory mapping disabled
@@ -465,7 +465,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_nommap.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_nommap.nii.gz
 
   - name: CLEARSWI no phase rescale
     description: Test CLEARSWI without automatic phase rescaling
@@ -477,7 +477,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_norescale.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_norescale.nii.gz
 
   - name: CLEARSWI write intermediate steps
     description: Test CLEARSWI saving intermediate processing steps
@@ -489,7 +489,7 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/clearswi_steps.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_steps.nii.gz
 
   # ==========================================================================
   # MCPC3DS COIL COMBINATION TESTS
@@ -503,7 +503,7 @@ tests:
               -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/mcpc3ds/combined_basic
+      - output_exists: ${output_dir}/mcpc3ds/combined_basic
 
   - name: MCPC3DS with custom smoothing
     description: Test MCPC3DS with modified smoothing sigma
@@ -515,7 +515,7 @@ tests:
               -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/mcpc3ds/combined_smooth
+      - output_exists: ${output_dir}/mcpc3ds/combined_smooth
 
   - name: MCPC3DS no smoothing
     description: Test MCPC3DS without smoothing
@@ -527,7 +527,7 @@ tests:
               -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/mcpc3ds/combined_nosmooth
+      - output_exists: ${output_dir}/mcpc3ds/combined_nosmooth
 
   - name: MCPC3DS write phase offsets
     description: Test MCPC3DS saving estimated phase offsets
@@ -539,7 +539,7 @@ tests:
               -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/mcpc3ds/combined_offsets
+      - output_exists: ${output_dir}/mcpc3ds/combined_offsets
 
   - name: MCPC3DS no memory mapping
     description: Test MCPC3DS with memory mapping disabled
@@ -551,7 +551,7 @@ tests:
               -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/mcpc3ds/combined_nommap
+      - output_exists: ${output_dir}/mcpc3ds/combined_nommap
 
   - name: MCPC3DS no phase rescale
     description: Test MCPC3DS without automatic phase rescaling
@@ -563,7 +563,7 @@ tests:
               -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/mcpc3ds/combined_norescale
+      - output_exists: ${output_dir}/mcpc3ds/combined_norescale
 
   - name: MCPC3DS write intermediate steps
     description: Test MCPC3DS saving intermediate processing steps
@@ -575,7 +575,7 @@ tests:
               -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/mcpc3ds/combined_steps
+      - output_exists: ${output_dir}/mcpc3ds/combined_steps
 
   # ==========================================================================
   # EDGE CASES AND ERROR HANDLING
@@ -604,7 +604,7 @@ tests:
                -v
     depends_on: ROMEO single-echo with robustmask
     validate:
-      - output_exists: test_output/clearswi/clearswi_from_romeo.nii.gz
+      - output_exists: ${output_dir}/clearswi/clearswi_from_romeo.nii.gz
 
   - name: Complete SWI processing workflow
     description: Full pipeline from synthetic data to SWI output
@@ -628,8 +628,8 @@ tests:
                -v
     depends_on: Create synthetic phase image from T1w
     validate:
-      - output_exists: test_output/clearswi/workflow_final.nii.gz
-      - output_exists: test_output/romeo/workflow_unwrapped/
+      - output_exists: ${output_dir}/clearswi/workflow_final.nii.gz
+      - output_exists: ${output_dir}/romeo/workflow_unwrapped/
 
   # ==========================================================================
   # JULIA ENVIRONMENT TESTS
